--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .ipynb_checkpoints/
 .DS_Store
 Projects/Project4_ABTesting/Analyze_ab_test_results_notebook.ipynb
+Projects/Project_7_WeRateDogs/credentials.json
+Projects/Project_7_WeRateDogs/act_report.odt
+Projects/Project_7_WeRateDogs/wrangle_report.odt
