--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Projects/Project4_ABTesting/Analyze_ab_test_results_notebook.ipynb
 Projects/Project_7_WeRateDogs/credentials.json
 Projects/Project_7_WeRateDogs/act_report.odt
 Projects/Project_7_WeRateDogs/wrangle_report.odt
+Projects/Project_8_Chytridiomycosis/viz_report.odt
