format git cheatsheet

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Projects/Project_7_WeRateDogs/credentials.json
 Projects/Project_7_WeRateDogs/act_report.odt
 Projects/Project_7_WeRateDogs/wrangle_report.odt
 Projects/Project_8_Chytridiomycosis/viz_report.odt
+Projects/Project_8_Chytridiomycosis/vis_report.odt
